# openbook_backend

./: .env  .env.example  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py  АГСК - электрика и слаботочка разделенный по брендам 3.xlsm
app/api/: brands.py  importer.py  products.py  schemas.py
app/core/: config.py
app/db/: models.py  session.py
gq_kp_fastapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_import_mapping.py
